--- a/src/app/dashboard/views/console/console.component.scss
+++ b/src/app/dashboard/views/console/console.component.scss
@@ -161,3 +161,9 @@
         transform: rotate(360deg);
     }
 }
+
+
+.share-changelog-dropdown {
+    margin: 0 !important;
+    padding: 0 !important;
+}
