--- a/src/app/shared/button-action/button-action.component.html
+++ b/src/app/shared/button-action/button-action.component.html
@@ -1,34 +1,34 @@
-<ng-container *ngIf="actionData!.type == 'link'; else videoAction">
+<ng-container *ngIf="action.type == 'link'; else videoAction">
     <div>
         <a
             [ngClass]="{
-                'buttom-big': type == 'big',
-                'buttom-small': type == 'small'
+                'buttom-big': bigButton,
+                'buttom-small': smallButton
             }"
             class="px-2"
-            href="http://{{ actionData!.link }}"
-            target="_blank"
+            href="#"
+            (click)="!develop ? openLink($event) : callAddAction($event)"
         >
             <fa-icon [icon]="actionLink"></fa-icon>
-            <span class="px-2" >Link</span>
+            <span class="px-2">Link</span>
         </a>
     </div></ng-container
 >
 
 <ng-template #videoAction>
-    <ng-container *ngIf="actionData!.type == 'video'; else addAction">
+    <ng-container *ngIf="action.type == 'video'; else addAction">
         <div>
             <a
                 [ngClass]="{
-                    'buttom-big': type == 'big',
-                    'buttom-small': type == 'small'
+                    'buttom-big': bigButton,
+                    'buttom-small': smallButton
                 }"
                 class="px-2"
                 href="#"
-                (click)="playVideoAction( $event );"
+                (click)="!develop ? playVideoAction($event) : callAddAction($event)"
             >
                 <fa-icon [icon]="actionPlay"></fa-icon>
-                <span class="px-2" >Video</span>
+                <span class="px-2">Video</span>
             </a>
         </div>
     </ng-container>
@@ -38,8 +38,8 @@
     <div>
         <a
             [ngClass]="{
-                'buttom-big': type == 'big',
-                'buttom-small': type == 'small'
+                'buttom-big': bigButton,
+                'buttom-small': smallButton
             }"
             class="px-2"
             href="#"
