--- a/src/app/shared/video-player/video-player.component.scss
+++ b/src/app/shared/video-player/video-player.component.scss
@@ -2,7 +2,7 @@
     width: 100vw;
     height: 100vh;
     background-color: #ffffff80;
-    position: absolute;
+    position: fixed;
     z-index: 1;
 }
 
