--- a/src/app/changelog/views/release-changelog/release-changelog.component.html
+++ b/src/app/changelog/views/release-changelog/release-changelog.component.html
@@ -42,7 +42,7 @@
                         <div
                             class="changelog-release-action d-flex align-items-end"
                         >
-                            <app-button-action
+                            <app-button-action *ngIf="release.action?.type"
                                 [bigButton]="true"
                                 [featureIndex]="0"
                                 [actionData]="
@@ -52,8 +52,9 @@
                         </div>
                     </div>
                     <ng-container *ngFor="let feature of features">
+                        <!-- FIXME -->
                         <div
-                            *ngIf="feature.tag && feature.action.link"
+                            *ngIf="feature.action.type"
                             class="changelog-features d-flex p-3"
                         >
                             <div class="flex-grow-1 d-flex pr-3">
@@ -66,8 +67,11 @@
                                             set="apple"
                                         ></ngx-emoji>
                                     </span>
-                                    <span [style.background-color]="getTagColor(feature.tag)" class="feature-tag">
+                                    <span *ngIf="feature.tag" [style.background-color]="getTagColor(feature.tag)" class="feature-tag">
                                         {{ feature.tag }}
+                                    </span>
+                                    <span *ngIf="!feature.tag" [style.background-color]="Color('red').lightness(70)" class="feature-tag">
+                                        #Chagger
                                     </span>
                                 </div>
                                 <div class="feature-description w-100 mt-2 px-4 py-2">
