--- a/src/app/dashboard/views/console/console.component.html
+++ b/src/app/dashboard/views/console/console.component.html
@@ -25,6 +25,7 @@
                         >
                             <div class="form-group">
                                 <label for="workspace">Workspace Name:</label>
+                                <!-- TODO: Add id to form-control -->
                                 <input
                                     class="form-control"
                                     type="text"
