gallery component done

--- a/src/app/changelog/views/changelog/changelog.component.html
+++ b/src/app/changelog/views/changelog/changelog.component.html
@@ -1,2 +1,3 @@
 <app-video-player *ngIf="isVideoPlayerVisible"></app-video-player>
+<app-gallery *ngIf="isGalleryVisible" ></app-gallery>
 <router-outlet></router-outlet>
