--- a/src/app/dashboard/views/console/console.component.html
+++ b/src/app/dashboard/views/console/console.component.html
@@ -25,8 +25,8 @@
                         >
                             <div class="form-group">
                                 <label for="workspace">Workspace Name:</label>
-                                <!-- TODO: Add id to form-control -->
                                 <input
+                                    id="workspace"
                                     class="form-control"
                                     type="text"
                                     formControlName="workspace"
